@@ -1,7 +1,7 @@
 ############################################################################
 # arch/arm/src/armv/Toolchain.defs
 #
-#   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2012-2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -103,11 +103,11 @@ endif
 
 ifeq ($(CONFIG_ARM_TOOLCHAIN),BUILDROOT)
 ifeq ($(CONFIG_ARM_OABI_TOOLCHAIN),y)
-  CROSSDEV = arm-nuttx-elf-
-  ARCROSSDEV = arm-nuttx-elf-
+  CROSSDEV ?= arm-nuttx-elf-
+  ARCROSSDEV ?= arm-nuttx-elf-
 else
-  CROSSDEV = arm-nuttx-eabi-
-  ARCROSSDEV = arm-nuttx-eabi-
+  CROSSDEV ?= arm-nuttx-eabi-
+  ARCROSSDEV ?= arm-nuttx-eabi-
 endif
   MAXOPTIMIZATION = -Os
 endif
@@ -115,16 +115,16 @@ endif
 # CodeSourcery under Linux
 
 ifeq ($(CONFIG_ARM_TOOLCHAIN),CODESOURCERYL)
-  CROSSDEV = arm-none-eabi-
-  ARCROSSDEV = arm-none-eabi-
+  CROSSDEV ?= arm-none-eabi-
+  ARCROSSDEV ?= arm-none-eabi-
   MAXOPTIMIZATION = -O2
 endif
 
 # CodeSourcery under Windows
 
 ifeq ($(CONFIG_ARM_TOOLCHAIN),CODESOURCERYW)
-  CROSSDEV = arm-none-eabi-
-  ARCROSSDEV = arm-none-eabi-
+  CROSSDEV ?= arm-none-eabi-
+  ARCROSSDEV ?= arm-none-eabi-
   MAXOPTIMIZATION = -O2
   ifneq ($(CONFIG_WINDOWS_NATIVE),y)
     WINTOOL = y
@@ -134,8 +134,8 @@ endif
 # devkitARM under Windows
 
 ifeq ($(CONFIG_ARM_TOOLCHAIN),DEVKITARM)
-  CROSSDEV = arm-eabi-
-  ARCROSSDEV = arm-eabi-
+  CROSSDEV ?= arm-eabi-
+  ARCROSSDEV ?= arm-eabi-
   ifneq ($(CONFIG_WINDOWS_NATIVE),y)
     WINTOOL = y
   endif
@@ -144,8 +144,8 @@ endif
 # Generic GNU EABI toolchain on OS X, Linux or any typical Posix system
 
 ifeq ($(CONFIG_ARM_TOOLCHAIN),GNU_EABI)
-  CROSSDEV = arm-none-eabi-
-  ARCROSSDEV = arm-none-eabi-
+  CROSSDEV ?= arm-none-eabi-
+  ARCROSSDEV ?= arm-none-eabi-
   MAXOPTIMIZATION = -O3
 endif  
 
