@@ -1,7 +1,7 @@
 ############################################################################
 # arch/avr/src/avr/Toolchain.defs
 #
-#   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2012-2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -82,7 +82,7 @@ endif
 # NuttX buildroot GCC toolchain under Linux or Cygwin
 
 ifeq ($(CONFIG_AVR_TOOLCHAIN),BUILDROOT)
-  CROSSDEV = avr-nuttx-elf-
+  CROSSDEV ?= avr-nuttx-elf-
   MAXOPTIMIZATION = -O2
   LDFLAGS += -nostartfiles -nodefaultlibs
 endif
@@ -90,7 +90,7 @@ endif
 # AVR CrossPack under OS X
 
 ifeq ($(CONFIG_AVR_TOOLCHAIN),CROSSPACK)
-  CROSSDEV = avr-
+  CROSSDEV ?= avr-
   MAXOPTIMIZATION = -O2
   LDFLAGS += -nostartfiles -nodefaultlibs
 endif
@@ -98,7 +98,7 @@ endif
 # GCC toolchain under Linux
 
 ifeq ($(CONFIG_AVR_TOOLCHAIN),LINUXGCC)
-  CROSSDEV = avr-
+  CROSSDEV ?= avr-
   MAXOPTIMIZATION = -O2
   LDFLAGS += -nostartfiles -nodefaultlibs
 endif
@@ -106,7 +106,7 @@ endif
 # WinAVR toolchain under Windows/Cygwin
 
 ifeq ($(CONFIG_AVR_TOOLCHAIN),WINAVR)
-  CROSSDEV = avr-
+  CROSSDEV ?= avr-
   ifneq ($(CONFIG_WINDOWS_NATIVE),y)
     WINTOOL = y
   endif
